--- a/arch/arm/configs/picassomf_nomodules_pmos_defconfig
+++ b/arch/arm/configs/picassomf_nomodules_pmos_defconfig
@@ -478,7 +478,7 @@ CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
 CONFIG_ARM_APPENDED_DTB=y
 # CONFIG_ARM_ATAG_DTB_COMPAT is not set
-CONFIG_CMDLINE="mem=1022M rdinit=/init rootfstype=ramfs console=ttyGS0,115200"
+CONFIG_CMDLINE="mem=1022M rdinit=/init rootfstype=ramfs console=tty0 console=ttyGS0,115200 video=tegrafb"
 # CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 # CONFIG_CMDLINE_EXTEND is not set
 CONFIG_CMDLINE_FORCE=y
@@ -3292,8 +3292,8 @@ CONFIG_DRM_PANEL=y
 # CONFIG_DRM_PANEL_BOE_HIMAX8279D is not set
 # CONFIG_DRM_PANEL_BOE_TV101WUM_NL6 is not set
 # CONFIG_DRM_PANEL_DSI_CM is not set
-# CONFIG_DRM_PANEL_LVDS is not set
-# CONFIG_DRM_PANEL_SIMPLE is not set
+CONFIG_DRM_PANEL_LVDS=y
+CONFIG_DRM_PANEL_SIMPLE=y
 # CONFIG_DRM_PANEL_EDP is not set
 # CONFIG_DRM_PANEL_EBBG_FT8719 is not set
 # CONFIG_DRM_PANEL_ELIDA_KD35T133 is not set
@@ -3368,14 +3368,14 @@ CONFIG_DRM_PANEL_BRIDGE=y
 # CONFIG_DRM_CDNS_DSI is not set
 # CONFIG_DRM_CHIPONE_ICN6211 is not set
 # CONFIG_DRM_CHRONTEL_CH7033 is not set
-# CONFIG_DRM_DISPLAY_CONNECTOR is not set
+CONFIG_DRM_DISPLAY_CONNECTOR=y
 # CONFIG_DRM_ITE_IT6505 is not set
 # CONFIG_DRM_LONTIUM_LT8912B is not set
 # CONFIG_DRM_LONTIUM_LT9211 is not set
 # CONFIG_DRM_LONTIUM_LT9611 is not set
 # CONFIG_DRM_LONTIUM_LT9611UXC is not set
 # CONFIG_DRM_ITE_IT66121 is not set
-# CONFIG_DRM_LVDS_CODEC is not set
+CONFIG_DRM_LVDS_CODEC=y
 # CONFIG_DRM_MEGACHIPS_STDPXXXX_GE_B850V3_FW is not set
 # CONFIG_DRM_NWL_MIPI_DSI is not set
 # CONFIG_DRM_NXP_PTN3460 is not set
@@ -3488,6 +3488,7 @@ CONFIG_BACKLIGHT_PWM=y
 # CONFIG_BACKLIGHT_LED is not set
 # end of Backlight & LCD device support
 
+CONFIG_VIDEOMODE_HELPERS=y
 CONFIG_HDMI=y
 
 #
