warning: change pinmux to uarte on sdcard slot
this way it is possible to have the serial port uart 5 (uarte)
externally available (using a breakout board). Pin layout should be as
follows:

So far only TXD has been tested working. The use case would be to
connect a logic analyzer to the SD DAT 3 / TXD pin and read data with a
external computer from the tablet that writes to the serial port uarte.

SD DAT 0 -> uarte RTS
SD DAT 1 -> uarte CTS
SD DAT 2 -> uarte RXD
SD DAT 3 -> uarte TXD

--- a/arch/arm/boot/dts/tegra30-acer-a700-picassomf.dts
+++ b/arch/arm/boot/dts/tegra30-acer-a700-picassomf.dts
@@ -36,6 +36,10 @@
             */
 	};
 
+	/* FOR DEBUGGING ONLY: uarte pinmux to sdcard slot */
+	uartx: serial@70006400 {
+		status = "okay";
+	};
 
         /* regulators */
 
@@ -532,6 +536,7 @@
                 nvidia,enable-input = <TEGRA_PIN_DISABLE>;
             };
 
+/* FOR DEBUGGING ONLY: remove sd function from sdcard pins
             sdmmc1_clk_pz0 {
                 nvidia,pins = "sdmmc1_clk_pz0";
                 nvidia,function = "sdmmc1";
@@ -547,6 +552,27 @@
                 nvidia,tristate = <TEGRA_PIN_DISABLE>;
                 nvidia,enable-input = <TEGRA_PIN_ENABLE>;
             };
+*/
+
+        /* FOR DEBUGGING ONLY: RXD and CTS for uarte on sdcard pins */
+        sdmmc1_dat2_py5 {
+			nvidia,pins = "sdmmc1_dat2_py5",
+			"sdmmc1_dat1_py6";
+		nvidia,function = "uarte";
+		nvidia,pull = <TEGRA_PIN_PULL_NONE>;
+		nvidia,tristate = <TEGRA_PIN_DISABLE>;
+		nvidia,enable-input = <TEGRA_PIN_ENABLE>;
+	};
+
+	/* FOR DEBUGGING ONLY: TXD and RTS for uarte on sdcard pins */
+	sdmmc1_dat3_py4 {
+		nvidia,pins = "sdmmc1_dat0_py7",
+			"sdmmc1_dat3_py4";
+		nvidia,function = "uarte";
+		nvidia,pull = <TEGRA_PIN_PULL_NONE>;
+		nvidia,tristate = <TEGRA_PIN_DISABLE>;
+		nvidia,enable-input = <TEGRA_PIN_DISABLE>;
+        };
 
             sdmmc3_clk_pa6 {
                 nvidia,pins = "sdmmc3_clk_pa6";
